# cointoss

c++/: CMakeLists.txt  COMPILE COMMAND.txt  bground  bground.cpp  cointroll  cointroll_morning  cointroll_morning.cpp  malte.bz2  throw  throw.cpp  throw10  throw10.cpp  treshhold
python/coindrop_basic/: basic-img.py  circles.py  contours.py  simple_coin_seg.py
python/coindrop_opencv2/: blob-coin-matt.py  blob-coin-reflective-loop.py  blob-coin-reflective.py  blob.py  camera-capture.py  circle-vision-hough.py  circle-vision-orig.py  circle-vision.py  coin-seg-img.py  coin-seg.py  coin-webcam.py  cycle-through.py  resize.py  scratchpad.py  temp1.py  template_match_coin.py  videotest.py  watershed.py
python/coindrop_opencv2/demo/circle-detection-opencv/: cirlcle-vision-old.py  detect_circles.py  opencvhough.py
python/coindrop_opencv3/: HSV Detect.py  blob-blue.py  blob-coin.py  blob-hilight.py  blob-hsv.py  blob-lowlight.py  coin-seg.py  colorpicker2.py  contrast.py  hsv-show.py  hsvconverter.py  invertcolor.py  keypress.py  openCV200_Win32DLLs.7z  rangetest.py  rbg-hsv.py  rolling-image.py  videocap-ocv3.py
python/coindrop_opencv3/gamma-correction/: adjust_gamma.py
